<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bing Maps SDK</string>
    
    <string name="app_description">This application is a demo of the Bing Maps Android SDK in action. Use this application as an example of how to create your own Bing Maps based Android application or create your own using the SDK created by </string>
    
    <string name="loading">Loading</string>
    
    <string name="details">Details</string>
    
    <!-- Menu text -->
    <string name="myLocation">My Location</string>
	<string name="search">Search</string>
	<string name="directions">Directions</string>

	<string name="more">More</string>	
	<string name="clearMap">Clear Map</string>
    <string name="about">About</string>
    
    <string name="mapMode">Map Mode</string>
    <string name="auto">Auto</string>
    <string name="road">Road</string>
    <string name="aerial">Aerial</string>
    <string name="birdseye">Birdseye</string>
    <string name="streetSide">Street Side</string>

    <string name="layers">Layers</string>
    <string name="traffic">Traffic</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom Out</string>
    <string name="ordnanceSurvey">Ordnance Survey(UK)</string>
    <string name="overrideCulture">Override Culture</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="address">Address: </string>
    <string name="getDirections">Get Directions</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enterAddress">Enter Address</string>
    <string name="sampleLang">en-US</string>
    <string name="enterCountryCode">Enter Country Code</string>
    <string name="culture_mkt_param">Culture (mkt parameter)</string>
    <string name="change">Change</string>
    <string name="canvasDark">Dark Canvas</string>
    <string name="canvasLight">Light Canvas</string>
    <string name="grayscale">Grayscale</string>
    <string name="mercator">Mercator (Blank)</string>
</resources>
